[package]
name = "pegy"
version = "0.1.0"
edition = "2021"

rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pegy-derive = {path="../pegy-derive"}
futures = {version="^0.3", optional=true}

[features]
default = ["futures"]
futures = ["dep:futures"]