[package]
name = "pegy"
version = "0.1.0"
edition = "2021"
authors = [ "YC Lam" ]
license = "MIT"
repository = "https://github.com/YC-Lammy/pegy"
description = "A derive based parser generator."
keywords = ["peg", "parser", "parsing", "grammar"]
categories = ["parsing"]
documentation = "https://docs.rs/pegy"
readme = "../README.md"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pegy-derive = "0.1.0"
futures = {version="^0.3", optional=true}

[features]
default = ["futures"]
futures = ["dep:futures"]
