[package]
name = "pegy"
version = "0.1.2"
edition = "2021"
authors = [ "YC Lam" ]
license = "MIT"
repository = "https://github.com/YC-Lammy/pegy"
description = "A derive based parser generator."
keywords = ["peg", "parser", "parsing", "grammar", "async"]
categories = ["parsing", "Asynchronous"]
documentation = "https://docs.rs/pegy"
readme = "../README.md"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pegy-derive = "0.1.2"
futures = {version="^0.3", optional=true}

itoa = "1"
fast-float = "0.2"

[dev-dependencies]
lexical-core = "0.7"
hexf-parse = "0.1"
ryu = "1.0"
fastrand = "1.4"
num-bigint = "0.3"

[features]
default = ["futures", "unicode"]
futures = ["dep:futures"]
unicode = []